Removed display flex for mainDisplayContain to fix manage client css on smaller screens

--- a/react-vite/src/components/LoginFormPage/LoginForm.css
+++ b/react-vite/src/components/LoginFormPage/LoginForm.css
@@ -3,7 +3,7 @@
 }
 
 /* Small devices (tablets) */
-@media only screen and (min-width: 601px) and (max-width: 768px) {
+@media only screen and (min-width: 601px) {
 }
 
 /* Medium devices (laptops) */
