--- a/react-vite/src/components/ManageClients/manage-clients.css
+++ b/react-vite/src/components/ManageClients/manage-clients.css
@@ -6,8 +6,9 @@
   }
 
   #addNewClientBtn {
-    width: 100%;
     height: 60px;
+    width: 100%;
+    box-sizing: border-box;
     background-color: orange;
     cursor: pointer;
     font-size: 18px;
@@ -16,7 +17,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    /* padding: 0 20px; */
   }
 }
 
@@ -41,22 +42,6 @@
     padding: 0 20px;
   }
 }
-
-/* Medium devices (laptops) */
-/* @media only screen and (min-width: 769px) and (max-width: 1024px) {
-  .manageClientsHeader h1 {
-    width: 50%;
-    padding: 0 0 20px 0;
-  }
-} */
-
-/* Large devices (desktops) */
-/* @media only screen and (min-width: 1025px) {
-  .manageClientsHeader h1 {
-    width: 50%;
-    padding: 0 0 20px 0;
-  }
-} */
 
 .clientInfoContain {
   background-color: rgba(0, 0, 0, 0.417);
@@ -114,6 +99,11 @@
 #addNewClientBtn:hover {
   background-color: black;
   color: white;
+}
+
+#addNewClientBtn i {
+  padding: 0 10px;
+  box-sizing: border-box;
 }
 
 #delBtn:hover,
